--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -10,9 +10,9 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-11 22:38+0200\n"
-"PO-Revision-Date: 2015-06-25 15:15+0000\n"
+"PO-Revision-Date: 2015-06-30 18:43+0000\n"
 "Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
-"Language-Team: Hungarian (Hungary) (http://www.transifex.com/projects/p/openmediavault/language/hu_HU/)\n"
+"Language-Team: Hungarian (Hungary) (http://www.transifex.com/p/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -506,7 +506,7 @@ msgid "Bolivia"
 msgstr "Bolívia"
 
 msgid "Bond"
-msgstr "Köteg"
+msgstr "Kötegelt"
 
 msgid "Boot"
 msgstr "Boot"
@@ -663,7 +663,7 @@ msgid "Comment"
 msgstr "Megjegyzés"
 
 msgid "Common Name"
-msgstr "Általános név"
+msgstr "Közös név"
 
 msgid "Community"
 msgstr "Közösség"
@@ -979,7 +979,7 @@ msgid "Domain name"
 msgstr "Tartománynév"
 
 msgid "Domains used when resolving host names."
-msgstr ""
+msgstr "Domainek használata a gépnevek feloldásához."
 
 msgid "Dominica"
 msgstr "Dominika"
@@ -1035,7 +1035,7 @@ msgid "Edit VLAN connection"
 msgstr "VLAN kapcsolat módosítás"
 
 msgid "Edit Wi-Fi connection"
-msgstr "Wi.Fi kapcsolat módosítás"
+msgstr "Wi-Fi kapcsolat módosítás"
 
 msgid "Edit bond connection"
 msgstr "Kötegelt kapcsolat módosítás"
@@ -1529,7 +1529,7 @@ msgid "ID"
 msgstr "ID"
 
 msgid "IP addresses of domain name servers used to resolve host names."
-msgstr ""
+msgstr "IP-címek a távoli névszerverek feloldásához."
 
 msgid "IPv4"
 msgstr "IPv4"
@@ -1799,7 +1799,7 @@ msgstr "Libanon"
 msgid ""
 "Length of time in seconds to blink one or more LEDs on the specific ethernet"
 " port."
-msgstr "A különleges ethernet port LEDjeinek egyszeri vagy többszöri villogásának ideje másodpercben megadva."
+msgstr "Az ethernet port LEDjeinek egyszeri, vagy többszöri villogásának ideje másodpercben megadva."
 
 msgid "Lesotho"
 msgstr "Lesothó"
@@ -1971,7 +1971,7 @@ msgid "Maximum number of simultaneous clients."
 msgstr "Egyidejűleg belépett kliensek maximális száma."
 
 msgid "Maximum performance, maximum acoustic output"
-msgstr "Maximális teljesítmény, Maximális zajszint"
+msgstr "Maximális teljesítmény, maximális zajszint"
 
 msgid "Maximum upload rate (KiB/s)"
 msgstr "Maximum feltöltési sebesség (KB/s)"
@@ -1989,7 +1989,7 @@ msgid "Members"
 msgstr "Tagok"
 
 msgid "Memory usage"
-msgstr "Memóriahasználat"
+msgstr "Memória használat"
 
 msgid "Message"
 msgstr "Üzenet"
@@ -2019,7 +2019,7 @@ msgid "Minimum"
 msgstr "Minimum"
 
 msgid "Minimum performance, Minimum acoustic output"
-msgstr "Minimális teljesítmény, Minimális zajszint"
+msgstr "Minimális teljesítmény, minimális zajszint"
 
 msgid "Minimum {0} selected item(s) required"
 msgstr "Minimum {0} kiválasztott tétel szükséges"
@@ -2433,7 +2433,7 @@ msgstr "Kérlek előbb válassz ki egy kötetet."
 msgid ""
 "Please make sure that the shared folder is publicly writable if new files "
 "are allowed."
-msgstr ""
+msgstr "Kérlek győződj meg róla, hogy a megosztott mappa nyilvánosan írható és az új fájlok engedélyezettek e."
 
 msgid ""
 "Please note that no communication with the system is possible during this "
@@ -3515,7 +3515,7 @@ msgstr "Ennek a mezőnek egy tartománynév listának vagy egy IP címnek kell l
 msgid ""
 "This field should be a list of domain names or IP addresses seperated by <,>"
 " or <;>"
-msgstr ""
+msgstr "Ennek a mezőnek egy tartománynév listának vagy egy IP címnek kell lennie <,> vagy <;> -vel elválasztva."
 
 msgid "This field should be a list of host names or IP addresses"
 msgstr "Ennek a mezőnek hosztnév listának vagy egy IP címnek kell lennie"
