--- a/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
@@ -18,9 +18,9 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-11 22:38+0200\n"
-"PO-Revision-Date: 2015-06-12 11:39+0000\n"
+"PO-Revision-Date: 2015-06-29 17:01+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
-"Language-Team: German (http://www.transifex.com/projects/p/openmediavault/language/de/)\n"
+"Language-Team: German (http://www.transifex.com/p/openmediavault/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -2989,10 +2989,10 @@ msgid "Services"
 msgstr "Dienste"
 
 msgid "Session expired."
-msgstr "Sitzungszeit abgelaufen"
+msgstr "Sitzungszeit abgelaufen."
 
 msgid "Session not authenticated."
-msgstr "Sitzung nicht authentifiziert"
+msgstr "Sitzung nicht authentifiziert."
 
 msgid "Session timeout"
 msgstr "Sitzungszeitlimit"
