--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
@@ -10,9 +10,9 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-11 22:38+0200\n"
-"PO-Revision-Date: 2015-06-12 07:56+0000\n"
+"PO-Revision-Date: 2015-06-30 00:37+0000\n"
 "Last-Translator: songming <by@songming.me>\n"
-"Language-Team: Chinese (China) (http://www.transifex.com/projects/p/openmediavault/language/zh_CN/)\n"
+"Language-Team: Chinese (China) (http://www.transifex.com/p/openmediavault/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -2642,7 +2642,7 @@ msgid "Recycle bin"
 msgstr "回收站"
 
 msgid "Referenced"
-msgstr "参考"
+msgstr "引用"
 
 msgid "Refresh"
 msgstr "更新"
