--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (2.1.2) stable; urgency=low
 
+  * Mantis 0001365: Ability to add/remove system users to user created groups.
   * Mantis 0001368: User password changes field 'E-Mail'.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 15 Jul 2015 07:14:16 +0200
